Sync current education platform files